<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="48dp"
    android:layout_marginTop="48dp"
    android:layout_marginEnd="40dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_gravity="center"
        android:src="@drawable/calculator"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/etFirstValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#CFC5C5"
        android:ems="10"
        android:hint="@string/enter_first_value"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etSecondValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="#CFC5C5"
        android:ems="10"
        android:hint="@string/enter_second_value"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#616161"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tvAns"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#CFC5C5"
        android:padding="10dp"
        android:textColorHint="#616161"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/add"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnsub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/sub"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnMul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/mul"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/div"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>